# Headstart

./: .babelrc  .babelrc.json  .bootstraprc  .docker.test.env  .eslintrc.js  .flake8  .gitignore  .gitmodules  .prettierignore  .prettierrc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  babel.config.js  bubbles.js  config.example.js  config_ideabox.js  docker-compose-dataworker.yml  docker-compose-end2endtest.yml  docker-compose-integration-tests.yml  docker-compose-phptest.yml  docker-compose-rstudio.yml  docker-compose.yml  docker-compose_win.yml  eslint.config.mjs  eslintrc.config.ts  example.env  example_config.ini  example_config.js  headstart.js  index _cn3.html  index.html  index.php  index_pubmed.php  list.js  local-hotreload.sh  package-lock.json  package.json  (+15 more)
.github/: FUNDING.yml
checks/: config-js.sh  ht-access.sh
content/: index.js  output.json
data/: educational-technology.csv  output_scaling.csv
doc/: README.md  README.txt  creating-your-own-knowledge-map.md  howto_add_content_source.md  howto_search_repos.md  json-schema.json  modern_frontend_integration.md  server_config.md
e2e/: README.md  example.spec.ts  resources.spec.ts
examples/: funderproject.csv  object_ids.csv
lib/: LICENSE-quirksmode.txt  browser_detect.js
local_dev/: config_local_headstart.ini  config_local_projectwebsite.php  config_local_searchflow.ini  dev.env  entrypoint.php  pg_hba.conf  postgresql.conf  redis.conf
lsa/: headstartlsa.py
plos-scraping/: LICENCE.md  README.md  index.js  package.json
preprocessing/: Readme.md  metadata.csv
(+1622 files in other folders)
